--- a/СиАОД ЛР1/СиАОД ЛР1.vcxproj
+++ b/СиАОД ЛР1/СиАОД ЛР1.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Tree.cpp" />
     <ClCompile Include="СиАОД ЛР1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
