--- a/СиАОД ЛР1/СиАОД ЛР1.vcxproj.filters
+++ b/СиАОД ЛР1/СиАОД ЛР1.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="СиАОД ЛР1.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Tree.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Tree.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
