--- a/СиАОД ЛР1/СиАОД ЛР1.vcxproj
+++ b/СиАОД ЛР1/СиАОД ЛР1.vcxproj
@@ -128,7 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Tree.cpp" />
-    <ClCompile Include="СиАОД ЛР1.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tree.h" />
