--- a/СиАОД ЛР1/СиАОД ЛР1.vcxproj.filters
+++ b/СиАОД ЛР1/СиАОД ЛР1.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="СиАОД ЛР1.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="Tree.cpp">
